ping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - image: motomark/ping
        name: ping
        ports: 
        - containerPort: 9800
        volumeMounts:
          - name: application-config 
            mountPath: "/config"
            readOnly: true
      volumes:
      - name: application-config
        configMap:
          name: ping-app-config 
          items:
          - key: application.properties 
            path: application.properties
---
kind: Service
apiVersion: v1
metadata:
  name: ping-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: ping
  ports:
  - name: http
    port: 9800
    protocol: TCP
    targetPort: 9800
status:
  loadBalancer: {}
